// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textEmphasisPosition renders 0 1`] = `
Array [
  .c0 {
  text-emphasis-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisPosition renders function 1`] = `
Array [
  .c0 {
  text-emphasis-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisPosition renders invalid theme path 1`] = `
Array [
  .c0 {
  text-emphasis-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisPosition renders negative number 1`] = `
Array [
  .c0 {
  text-emphasis-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisPosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-emphasis-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-emphasis-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisPosition renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-emphasis-position: July;
  }
}

@media April {
  .c0 {
    text-emphasis-position: August;
  }
}

@media January {
  .c0 {
    text-emphasis-position: September;
  }
}

@media April {
  .c0 {
    text-emphasis-position: November;
  }
}

@media June {
  .c0 {
    text-emphasis-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-emphasis-position: July;
  }
}

@media April {
  .c0 {
    text-emphasis-position: August;
  }
}

@media January {
  .c0 {
    text-emphasis-position: September;
  }
}

@media April {
  .c0 {
    text-emphasis-position: November;
  }
}

@media June {
  .c0 {
    text-emphasis-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis-position: January;
  }
}

@media April {
  .c0 {
    text-emphasis-position: December;
  }
}

@media January {
  .c0 {
    text-emphasis-position: April;
  }
}

@media April {
  .c0 {
    text-emphasis-position: May;
  }
}

@media June {
  .c0 {
    text-emphasis-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-emphasis-position: January;
  }
}

@media April {
  .c0 {
    text-emphasis-position: December;
  }
}

@media January {
  .c0 {
    text-emphasis-position: April;
  }
}

@media April {
  .c0 {
    text-emphasis-position: May;
  }
}

@media June {
  .c0 {
    text-emphasis-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisPosition renders postitive number 1`] = `
Array [
  .c0 {
  text-emphasis-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisPosition renders string 1`] = `
Array [
  .c0 {
  text-emphasis-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textEmphasisPosition renders valid theme path 1`] = `
Array [
  .c0 {
  text-emphasis-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-emphasis-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
